kuber/src/wp4/wp-dep.yml

# k create deploy wp-dep --image="wordpress:5" --replicas=2 -n=wp4 $out
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dep
  namespace: wp4

spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-pod

  template:
    metadata:
      labels:
        app: wp-pod
    spec:
      containers:
      - image: wordpress:5
        name: wordpress
        ports:
        - containerPort: 80
---

# k expose deploy wp-dep --type=NodePort --target-port=30088 --name=wp-svc -n=wp4 $out
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  namespace: wp4

spec:
  selector:
    app: wp-pod
  type: NodePort
  ports:
  - name: http80
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30088
