kuber/src/wp4/wp-mariadb.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wp4

---

# k create deploy mariadb-dep --image="mariadb:10" -n wp4 $out
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
  namespace: wp4

spec:
  # headless service
  serviceName: mariadb-svc

  # pvc
  volumeClaimTemplates: 
  - metadata: 
      name: mariadb-100m-pvc
    spec: 
      storageClassName: nfs-client
      accessModes: 
      - ReadWriteMany

      resources: 
        requests: 
          storage: 100Mi

  replicas: 1
  selector:
    matchLabels:
      app: mariadb-pod

  template:
    metadata:
      labels:
        app: mariadb-pod
    spec:
      containers:
      - image: mariadb:10
        name: mariadb
        ports:
        - containerPort: 3306

        volumeMounts:
        - name: mariadb-100m-pvc
          mountPath: /var/lib/mysql

---

# kubectl create service clusterip mariadb-svc --clusterip='None' --tcp=3306 -n wp4 $out
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: wp4

spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mariadb-pod
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306

---
