kuber/src/wp4/wp-ing.yml

# k create ing wp-ing --rule="wp.test/=wp-svc:80,tls=ngx.test-secret" --class=ngx-lb -n wp4 $out
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  namespace: wp4

spec:
  ingressClassName: ngx-lb
  tls:
  - hosts:
    - wp.test
    secretName: wp-tls

  rules:
  - host: wp.test
    http:
      paths:
      - backend:
          service:
            name: wp-svc
            port:
              number: 80
        path: /
        pathType: Prefix

---
